<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dilaog_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableStart="@drawable/barq"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/Attention"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/tv_confirm"
        android:textSize="@dimen/_13sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/btn_shap"
        android:backgroundTint="@color/btnBackground"
        android:text="@string/Ok"
        android:textColor="@color/btnTextClolr"/>
</LinearLayout>
