<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/no_internet" />

    <TextView
        android:id="@+id/tv_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/no_inter_net"
        android:textColor="#000"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/tv_net2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_net"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/no_inter_nether"
        android:textSize="@dimen/_13sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_net2"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_16sdp"
        android:backgroundTint="@color/btnBackground"
        android:padding="@dimen/_10sdp"
        android:text="@string/refresh"
        android:textColor="@color/btnTextClolr"
        app:cornerRadius="@dimen/_8sdp" />

</RelativeLayout>