<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".featuers.ChangePaswordActivity.view.ChangePasswordActivity">



    <include
        android:id="@+id/layout_no_internet"
        layout="@layout/no_inter_conection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />



    <TextView
        android:id="@+id/tv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/change_passwor"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_dvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:gravity="center"
        android:text="@string/text_change_passwor"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@id/tv_top"
        app:layout_constraintStart_toStartOf="@id/tv_top"
        app:layout_constraintTop_toBottomOf="@id/tv_top" />

    <com.misknet.tabseet.marketer.custemEditText.EditTextThought
        android:id="@+id/ed_your_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/tv_dvice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_dvice"
        app:layout_constraintTop_toBottomOf="@id/tv_dvice"
        app:new_image_resrses="@drawable/alock_image"
        app:new_text="@string/old_password"

        />

    <com.misknet.tabseet.marketer.custemEditText.EditTextThought
        android:id="@+id/ed_your_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/ed_your_old_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/ed_your_old_password"
        app:layout_constraintTop_toBottomOf="@id/ed_your_old_password"
        app:new_image_resrses="@drawable/alock_image"
        app:new_text="@string/newPassword"

        />

    <com.misknet.tabseet.marketer.custemEditText.EditTextThought
        android:id="@+id/ed_your_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/ed_your_new_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/ed_your_new_password"
        app:layout_constraintTop_toBottomOf="@id/ed_your_new_password"
        app:new_image_resrses="@drawable/alock_image"
        app:new_text="@string/confirm_new_password"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:background="@drawable/btn_shap"
        android:backgroundTint="@color/btnBackground"
        android:onClick="svae"
        android:padding="@dimen/_10sdp"
        android:text="@string/save"
        android:textColor="@color/btnTextClolr"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/ed_your_confirm_new_password" />

    <ProgressBar
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView.Small"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:elevation="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:indeterminateTint="#fff"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_save_new_pass"
        app:layout_constraintEnd_toEndOf="@id/btn_save_new_pass"
        app:layout_constraintTop_toTopOf="@id/btn_save_new_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>