<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_show_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:background="@drawable/item_old_record_text"
        android:padding="@dimen/_8sdp"
        android:text="to day"
        android:textColor="#fff"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_7sdp"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/bacground_tint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/image_item_Vistor"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="8dp"
                android:src="@drawable/item_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.23000002" />


            <TextView
                android:id="@+id/number_of_visterr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/number_of_vistor"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="@id/image_item_Vistor"
                app:layout_constraintStart_toEndOf="@id/image_item_Vistor"
                app:layout_constraintTop_toTopOf="@id/image_item_Vistor"
                app:layout_constraintVertical_bias="0.18" />

            <TextView
                android:id="@+id/dater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="@dimen/_3sdp"
                android:hint="@string/date_of_vister"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/entry_feer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/number_of_entry_fee"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toEndOf="@id/image_item_Vistor"
                app:layout_constraintTop_toBottomOf="@id/number_of_visterr"
                app:layout_constraintVertical_bias="0.18" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>