<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dilaog_shape"
    android:orientation="vertical"
    >

    <!--    <TextView-->
    <!--        android:id="@+id/textview"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="@dimen/_16sdp"-->
    <!--        android:drawableStart="@drawable/barq"-->
    <!--        android:drawablePadding="@dimen/_5sdp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:text="@string/submit_suggestion_complaint"-->
    <!--        android:textSize="@dimen/_14sdp" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/ed_text"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/_90sdp"-->
    <!--        android:layout_gravity="center"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/textview"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginStart="@dimen/_16sdp"-->
    <!--        android:layout_marginTop="@dimen/_18sdp"-->
    <!--        android:layout_marginEnd="@dimen/_16sdp"-->
    <!--        android:background="@drawable/ed_shape"-->
    <!--        android:gravity="center"-->
    <!--        android:hint="@string/Write_her"-->
    <!--        android:padding="@dimen/_10sdp"-->
    <!--        android:textColor="#0271B8"-->
    <!--        android:textSize="@dimen/_13sdp" />-->

    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        android:id="@+id/btn_ok"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/_16sdp"-->
    <!--        android:layout_marginTop="@dimen/_18sdp"-->
    <!--        android:layout_marginEnd="@dimen/_16sdp"-->
    <!--        android:layout_marginBottom="@dimen/_20sdp"-->
    <!--        android:background="@drawable/btn_shap"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/ed_text"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        android:backgroundTint="@color/btnBackground"-->
    <!--        android:text="@string/send"-->
    <!--        android:textColor="@color/btnTextClolr" />-->
    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/barq"
        android:drawablePadding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/submit_suggestion_complaint"
        android:textColor="#000"
        android:textSize="@dimen/_12sdp" />


    <EditText
        android:id="@+id/ed_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/Write_her"
        android:background="@drawable/ed_shape"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/send"
        android:layout_gravity="center"
        android:textColor="@color/btnTextClolr"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:backgroundTint="@color/btnBackground"
        android:layout_marginTop="@dimen/_18sdp"/>


</LinearLayout>
